# openapi.yaml
@@ -12,15 +12,15 @@ paths:
         - posts
       summary: Get all posts
       responses:
-        '200':
+        "200":
           description: Successful response
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/posts'
-        '500':
+                  $ref: "#/components/schemas/posts"
+        "500":
           description: Internal server error
           content:
             application/json:
@@ -38,15 +38,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/posts'
+              $ref: "#/components/schemas/posts"
       responses:
-        '201':
+        "201":
           description: posts created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/posts'
-        '500':
+                $ref: "#/components/schemas/posts"
+        "500":
           description: Internal server error
           content:
             application/json:
@@ -70,15 +70,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/posts'
+              $ref: "#/components/schemas/posts"
       responses:
-        '200':
+        "200":
           description: posts updated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/posts'
-        '500':
+                $ref: "#/components/schemas/posts"
+        "500":
           description: Internal server error
           content:
             application/json:
@@ -98,7 +98,7 @@ paths:
           schema:
             type: string
       responses:
-        '204':
+        "204":
           description: posts deleted successfully
           content:
             application/json:
@@ -107,7 +107,7 @@ paths:
                 properties:
                   message:
                     type: string
-        '500':
+        "500":
           description: Internal server error
           content:
             application/json:
@@ -116,7 +116,52 @@ paths:
                 properties:
                   error:
                     type: string
-  # /auth:
+  /auth:
+    post:
+      tags:
+        - "auth"
+      summary: Authenticate user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                password:
+                  type: string
+      responses:
+        "200":
+          description: User authenticated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Invalid username or password"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Internal server error"
 components:
   schemas:
     posts:
@@ -139,14 +184,26 @@ components:
           type: string
         username:
           type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        image:
+          type: string
+        headline:
+          type: string
+        summary:
+          type: string
         password:
           type: string
         email:
           type: string
-        time_stamp:
-          type: string
+        # time_stamp:
+        #   type: string
         education:
-          type: object
+          type: array
+          items:
+            type: object
           properties:
             school:
               type: string
@@ -158,3 +215,85 @@ components:
               type: string
             end_date:
               type: string
+            description:
+              type: string
+        skill:
+          type: array
+          items:
+            type: object
+          properties:
+            skill:
+              type: string
+            time_stamp:
+              type: string
+        experience:
+          type: array
+          items:
+            type: object
+          properties:
+            title:
+              type: string
+            company:
+              type: string
+            start_date:
+              type: string
+            end_date:
+              type: string
+            description:
+              type: string
+    reactions:
+      type: object
+      properties:
+        _id:
+          type: string
+        user_id:
+          type: string
+        post_id:
+          type: string
+        comment_id:
+          type: string
+        reaction:
+          type: string
+          enum:
+            - like
+            - love
+            - haha
+            - wow
+            - sad
+            - angry
+        time_stamp:
+          type: string
+    comments:
+      type: object
+      properties:
+        _id:
+          type: string
+        user_id:
+          type: string
+        post_id:
+          type: string
+        comment_id:
+          type: string
+        content:
+          type: string
+        time_stamp:
+          type: string
+    connections:
+      type: object
+      properties:
+        _id:
+          type: string
+        user_id:
+          type: array
+          items:
+            type: string
+        time_stamp:
+          type: string
+
+
+
+
+
+
+
+
